--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/lodash": "^4.14.118",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
+    "deepdash": "^1.5.1",
+    "lodash": "^4.17.11",
     "rxjs": "~6.3.3",
     "xml-js": "^1.6.8",
     "zone.js": "~0.8.26"
@@ -46,6 +49,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "~3.1.6"
   }
 }
