--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@types/lodash": "^4.14.118",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
-    "deepdash": "^1.5.1",
     "lodash": "^4.17.11",
     "rxjs": "~6.3.3",
+    "traverse": "^0.6.6",
     "xml-js": "^1.6.8",
     "zone.js": "~0.8.26"
   },
