--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@types/lodash": "^4.14.118",
+    "angular-file-uploader": "^4.1.4",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
     "lodash": "^4.17.11",
