--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@types/lodash": "^4.14.118",
-    "angular-file-uploader": "^4.1.4",
-    "bootstrap": "^4.1.3",
+    "@types/traverse": "^0.6.32",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
     "deepdash": "^1.6.1",
