--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/router": "~7.0.0",
     "@types/lodash": "^4.14.118",
     "angular-file-uploader": "^4.1.4",
-    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
     "deepdash": "^1.6.1",
@@ -35,7 +34,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.0.0",
     "@types/d3": "^5.0.1",
     "@types/jasmine": "~2.8.8",
