--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.2.7",
     "@angular/router": "~7.2.7",
     "@types/lodash": "^4.14.121",
+    "angular-file-uploader": "^5.0.2",
     "core-js": "^2.6.5",
     "d3": "^5.9.1",
     "deepdash": "^2.0.2",
+    "json-server": "^0.14.2",
     "lodash": "^4.17.11",
     "rxjs": "~6.4.0",
     "traverse": "^0.6.6",
