--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "@angular/platform-browser": "~7.2.7",
     "@angular/platform-browser-dynamic": "~7.2.7",
     "@angular/router": "~7.2.7",
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@types/chart.js": "^2.7.48",
     "@types/lodash": "^4.14.121",
+    "angular-bootstrap-md": "^7.4.2",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.6.5",
     "d3": "^5.9.1",
     "deepdash": "^2.0.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "json-server": "^0.14.2",
     "lodash": "^4.17.11",
     "rxjs": "~6.4.0",
@@ -47,7 +54,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
