--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.6.5",
     "d3": "^5.9.1",
     "deepdash": "^2.0.2",
+    "fast-xml-parser": "^3.12.14",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.2",
