--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.2",
+    "protractor": "^5.4.2",
     "ts-node": "~8.0.2",
     "tslint": "~5.13.0",
     "tslint-config-prettier": "^1.18.0",
