--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "fast-xml-parser": "^3.12.14",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "json-server": "^0.14.2",
     "lodash": "^4.17.11",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.4.0",
     "traverse": "^0.6.6",
     "tslib": "^1.9.0",
